spelling mistake corrected

--- a/code_solution_ShubhamFarande_svfarande@gmail.com.ipynb
+++ b/code_solution_ShubhamFarande_svfarande@gmail.com.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Note**: Steps 1-3 are mandatory, step 4 is optional. \n",
     "\n",
-    "*Answers to above questions are in last cell of these notebook*"
+    "*Answers to above questions are in last cell of this notebook.*"
    ]
   },
   {
@@ -1372,7 +1372,7 @@
     "    - **Almost Perfect Classification of Ham Messages (TP = 172, FP = 1)**:\n",
     "        - The model handles ham messages very well, which might indicate that the language patterns in ham messages are easier to learn from the TF-IDF features.\n",
     "    - **Missed Spam Messages (FN = 8)**:\n",
-    "        - Out of all spam messages, it is failing to identify 8 as spam. Usally this is fine in ham/spam detection cases because a spam marked as ham can be taken care manually but its not good the other way round i.e. ham is marked as spam. This could be problematic if spam detection is critical, as it indicates little lower recall for spam (class 1). We can optimize the model based on recall depending on business requirements.\n",
+    "        - Out of all spam messages, it is failing to identify 8 as spam. Usally this is fine in ham/spam detection cases because a spam marked as ham can be taken care manually but its not good the other way round i.e. ham is marked as spam. This could be problematic if spam detection is critical, as it indicates little lower recall for spam (class 1). We can optimize the model based on recall and would be worth looking into depending on business requirements.\n",
     "2. Use a transformer-based language model to extract keywords from your training dataset that are not already there in the baseline model’s tf-idf vocabulary and may help in classification. Update the vocabulary of the tf-idf model. \n",
     "    - Used `dbmdz/bert-large-cased-finetuned-conll03-english` \n",
     "    - **Capabilities** : The bert-large-cased-finetuned-conll03-english model is highly capable at named entity recognition tasks, particularly for English text. It can identify a wide range of named entities, including people, organizations, locations, and more, with a high degree of accuracy.\n",
