--- a/code_solution_ShubhamFarande_svfarande@gmail.com.ipynb
+++ b/code_solution_ShubhamFarande_svfarande@gmail.com.ipynb
@@ -1387,9 +1387,15 @@
     "    **Improvements :**\n",
     "    - **Perfect Precision for Spam (FP = 0)**:\n",
     "        - Since now there are no false positives (FP = 0), the precision for spam classification is perfect (100%). This means the model is very confident in labeling a message as spam when it does so and it doesn't marks ham as spam\n",
+    "    - **Reason :** Looks like updating tfidf vocabulary with help of bert transformer helped improved precision.\n",
     "4. If you have time, try different transformer-based keyword extraction methods, update the vocabulary, train the tf-idf model and compare your results. What do you see? Perform any necessary analytics to support your conclusion.  \n",
     "    - Sorry due to resource and time constraint couldn't try this"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
